# merrin

./: README.md  config.py  display.py  install.sh  main.py  merrin.py  metrics.py  pyproject.toml
merrin/: __init__.py  __main__.py  config.py  display.py  metrics.py
